2012-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add missing \.
	Reported by: gentoofan

2012-01-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (xz_decompress): Fix return value.
	(direct_read): Use correct compressed size.
	(grub_squash_read_data): Likewise.

2012-01-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Platform limitations): New section.
	(Platform-specific operations): Likewise.
	* docs/grub-dev.texi (Porting): Likewise.

2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>

	IEEE1275 disk write support.

	* grub-core/kern/ieee1275/ieee1275.c (grub_ieee1275_write): Make buffer
	const void *.
	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_write): Likewise.
	* grub-core/disk/ieee1275/ofdisk.c (grub_ofdisk_read): Move open
	and seek loginc to ...
	(grub_ofdisk_prepare): ... here.
	(grub_ofdisk_write): Implement.

2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>

	ARC disk write support.

	* grub-core/disk/arc/arcdisk.c (handle_writable): New var.
	(reopen): New argument writable. All users updated.
	Handle required access mode.
	(grub_arcdisk_write): Implement.
	* include/grub/arc/arc.h (grub_arc_file_access): New enum.
	(grub_arc_firmware_vector): Make buffer to write a const buffer.

2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_device): New field size.
	(read_sblock): Don't attempt to read superblocks outside the disk size.

2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_load_sb): Use device size from
	first superblock to find the second one when possible.

2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix an ARC bug.
	Print a warning if no platform-specific setup is available.

2012-01-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Use static allocation rather than scratch pointer in reed_solomon.